# scholar-to-market

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
src/scholar_to_market/: analytics.py  cli.py  config.py  index.py  rag.py
src/scholar_to_market/dashboard/: app.py
src/scholar_to_market/ingest/: openalex.py  patents.py
src/scholar_to_market/samples/: patents_crispr.jsonl  patents_reference.jsonl
tests/: test_pipeline.py
